deploy/manifests/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: sealos-cloud-provider
  namespace: sealos
spec:
  ports:
    - port: 3000
  selector:
    app: sealos-cloud-provider

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sealos-cloud-provider
  namespace: sealos
spec:
  selector:
    matchLabels:
      app: sealos-cloud-provider
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sealos-cloud-provider
    spec:
      serviceAccountName: sealos-cloud-provider
      containers:
        - name: sealos-cloud-provider
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - 'ALL'
          image: zhujingyang/sealos-cloud-provider:0.1.1
          imagePullPolicy: Always
          volumeMounts:
            - name: sealos-cloud-provider-volume
              mountPath: /config.yaml
              subPath: config.yaml
      volumes:
        - name: sealos-cloud-provider-volume
          configMap:
            name: sealos-cloud-provider-config
